<resources>
    <string name="app_name">CoinBox</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_link">Create an Account</string>
    <string name="hint_username">username</string>
    <string name="logout">Logout</string>
    <string name="transfer">Transfer</string>
    <string name="buy_load">Buy Load</string>
    <string name="e_load">E-Load</string>
    <string name="peso">₱</string>
    <string name="ph_code">+63</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">Phone Number</string>
    <string name="send_to">Send to</string>
    <string name="buy_load_for">Buy load for</string>
    <string name="receiver_hint">Enter name or number</string>
    <string name="phone_hint">xxx xxx xxxx</string>
    <string name="amount">Amount</string>
    <string name="amount_hint">0.0</string>
    <string name="available_balance">Available Balance: </string>
    <string name="next">Next</string>
    <string name="pay">Pay</string>
    <string name="email_hint">Please enter a valid email address. The email should be in the format \'example@example.com\'.</string>
    <string name="password_hint">Your password should be at least 8 characters long and include a combination of uppercase and lowercase letters, numbers, and special characters.</string>
    <string name="transactions">Transactions</string>
    <string name="cashIn">Cash in</string>
    <string name="transactions_title">Transaction History</string>
    <string name="receiver_label">Receiver</string>
    <string name="sender_label">Sender</string>
    <string name="money">Money</string>
    <string name="cash_in_title">Cash In</string>
    <string name="over_the_counter">Over the counter</string>
    <string name="amount_prompt">Enter amount</string>
</resources>