<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/fragment_horizontal_margin"
            android:weightSum="2">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:scaleType="fitCenter"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                android:autofillHints="email"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:selectAllOnFocus="true" />

            <TextView
                android:id="@+id/emailHintText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".1"
                android:text="@string/email_hint"
                android:textStyle="italic"
                android:visibility="visible" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                android:autofillHints="password"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:selectAllOnFocus="true" />

            <TextView
                android:id="@+id/passwordHintText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".15"
                android:text="@string/password_hint"
                android:textStyle="italic"
                android:visibility="visible" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="start"
                android:layout_weight=".2"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/action_sign_in" />

            <TextView
                android:id="@+id/registerLink"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                android:gravity="center"
                android:text="@string/register_link"
                android:textColor="@color/design_default_color_error"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:progressTint="@color/purple_200"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>