<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransferFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/transfer"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight="match_constraint"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="4dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/send_to"
                            android:textColor="@color/purple_200"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/editTextPhoneRecipient"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp"
                                android:layout_weight=".7"
                                android:autofillHints=""
                                android:ems="10"
                                android:hint="@string/receiver_hint"
                                android:includeFontPadding="true"
                                android:inputType="phone"
                                android:textColor="@color/purple_200"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <ImageButton
                                android:id="@+id/contactsButton"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight=".3"
                                android:contentDescription="@string/receiver_hint"
                                android:minHeight="48dp"
                                android:src="@drawable/baseline_contact_page_24" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/textViewRecipientName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:textColor="@color/purple_200"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14dp"
                            android:text="@string/amount"
                            android:textColor="@color/purple_200"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight=".1"
                                android:text="@string/peso"
                                android:textColor="@color/purple_200"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/editTextAmount"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp"
                                android:layout_weight=".9"
                                android:autofillHints=""
                                android:ems="10"
                                android:hint="@string/amount_hint"
                                android:includeFontPadding="true"
                                android:inputType="phone"
                                android:textColor="@color/purple_200"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/textViewRemainingBalance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:text="@string/available_balance"
                            android:textColor="@color/purple_200"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/payButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:enabled="false"
            android:text="@string/pay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>