<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ELoadFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/buy_load"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight="match_constraint"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/payButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".01"
                    android:text="@string/buy_load_for"
                    android:textColor="@color/purple_200"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".02"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".1"
                        android:text="@string/ph_code"
                        android:textColor="@color/purple_200"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTextPhoneRecipient"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight=".6"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/phone_hint"
                        android:includeFontPadding="true"
                        android:inputType="phone"
                        android:textColor="@color/purple_200"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/contactsButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".3"
                        android:contentDescription="@string/receiver_hint"
                        android:minHeight="48dp"
                        android:src="@drawable/baseline_contact_page_24" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewRecipientName"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".01"
                    android:paddingStart="10dp"
                    android:textColor="@color/purple_200"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".075"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <RadioGroup
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".1"
                        android:gravity="center"
                        android:weightSum=".625">

                        <RadioButton
                            android:id="@+id/globeButton"
                            style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight=".125"
                            android:breakStrategy="simple"
                            android:minHeight="48dp"
                            android:tag="globe" />

                        <RadioButton
                            android:id="@+id/smartButton"
                            style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight=".125"
                            android:breakStrategy="simple"
                            android:minHeight="48dp"
                            android:tag="smart" />

                        <RadioButton
                            android:id="@+id/tntButton"
                            style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight=".125"
                            android:breakStrategy="simple"
                            android:minHeight="48dp"
                            android:tag="tnt"/>

                        <RadioButton
                            android:id="@+id/tmButton"
                            style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight=".125"
                            android:breakStrategy="simple"
                            android:minHeight="48dp"
                            android:tag="tm"/>

                        <RadioButton
                            android:id="@+id/ditoButton"
                            style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight=".125"
                            android:breakStrategy="simple"
                            android:minHeight="48dp"
                            android:tag="dito"/>

                    </RadioGroup>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".9"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:weightSum=".625">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_gravity="start"
                            android:layout_weight=".125"
                            android:minHeight="48dp"
                            android:scaleType="fitStart"
                            android:src="@drawable/sim_globe" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_gravity="start"
                            android:layout_weight=".125"
                            android:minHeight="48dp"
                            android:scaleType="fitStart"
                            android:src="@drawable/sim_smart" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_gravity="start"
                            android:layout_weight=".125"
                            android:minHeight="48dp"
                            android:scaleType="fitStart"
                            android:src="@drawable/sim_tnt" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_gravity="start"
                            android:layout_weight=".125"
                            android:minHeight="48dp"
                            android:scaleType="fitStart"
                            android:src="@drawable/sim_tm" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_gravity="start"
                            android:layout_weight=".125"
                            android:minHeight="48dp"
                            android:scaleType="fitStart"
                            android:src="@drawable/sim_dito" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="14dp"
                    android:layout_weight=".01"
                    android:text="@string/amount"
                    android:textColor="@color/purple_200"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".02"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".1"
                        android:text="@string/peso"
                        android:textColor="@color/purple_200"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTextAmount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight=".9"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/amount_hint"
                        android:includeFontPadding="true"
                        android:inputType="phone"
                        android:textColor="@color/purple_200"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textViewRemainingBalance"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".01"
                    android:paddingStart="10dp"
                    android:text="@string/available_balance"
                    android:textColor="@color/purple_200"
                    android:textSize="18sp" />

            </LinearLayout>

        </ScrollView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:cardCornerRadius="6dp"
            app:cardElevation="4dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/payButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:enabled="false"
            android:text="@string/buy_load"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>